gcc/testsuite/rust/rustc/ui/type/type-check/cannot_infer_local_or_vec.rs
fn main() {
    let x = vec![];
// { dg-error ".E0282." "" { target *-*-* } .-1 }
}

